--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </head>
 
 <body>
-<h1>Big Five Personality Test</h1>
+<h1>Асуудал шийдвэрлэх хэв маягийн тест</h1>
 <p class="description">Доорх 20 асуултад 1–5 оноогоор хариулна уу.<br>
 1 = Ерөөсөө санал нийлэхгүй байна &nbsp;&nbsp;|&nbsp;&nbsp; 2 = Бага зэрэг санал нийлэхгүй байна &nbsp;&nbsp;|&nbsp;&nbsp; 3 = Итгэлтэй биш байна &nbsp;&nbsp;|&nbsp;&nbsp; 4 = Бага зэрэг санал нийлж байна  &nbsp;&nbsp;|&nbsp;&nbsp; 5 = Маш их санал нийлж байна</p>
 
@@ -211,7 +211,7 @@ const questions = [
 "Би  илүү хүн төвтэй буюу хүмүүсийн харилцаа, санаа бодол, хэрэгцээг илүү чухал гэж үздэг, харин тухайн ажил эсвэл үүргийн даалгаврыг тийм ч их анхаардаггүй.", 
 "Би ямар нэгэн зүйл хийхээсээ өмнө, надад ямар ашиг тус болохыг мэдэхийг хүсдэг.",
 "Би ихэвчлэн асуудлуудыг хурдан шийддэг бөгөөд цагаа үрэхийг хүсдэггүй.", 
-"Би хийх ажилтай бол, тэрийгээ хийж дуусгадаг, хийх явцад бусдын сэтгэл санаан сөрөг нөлөө үзүүлэх нь надад хамаагүй.",
+"Би хийх ажилтай бол, тэрийгээ хийж дуусгадаг, хийх явцад бусдын сэтгэл санаанд сөрөг нөлөө үзүүлэх нь надад хамаагүй.",
 "Би өдөр тутмын энгийн ажлуудаас амархан уйддаг, шинэ, төвөгтэй сорилтуудтай тулахыг илүүд үздэг.",
 "Би бусдын асуудалд хэрхэн мэдрэмжтэй ханддагийг сайнаар үнэлж чаддаг.", 
 "Би асуудал ямар ч хүнд хэцүү байсан ч сэтгэл санаагаар унадаггүй.",
@@ -318,3 +318,4 @@ document.getElementById("testForm").addEventListener("submit", function (event) 
 </body>
 
 </html>
+
